#4: fixed alignment in sign-in form

--- a/app/stylesheets/common.sass
+++ b/app/stylesheets/common.sass
@@ -103,3 +103,6 @@ a
     margin-left: 10px
     width: 940px
     background-color: #ffffff
+
+.sign_in_content
+    margin-left: 20px
